--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <h1 style="text-align: center">TEST</h1>
         <div class="chatbot-box">
             <button class="chatbot-button" id="chatbot-button">
                 <img
